--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
 {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 30%;
     z-index: 100;
+    width: 200px;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Arial, san-serif;
+    outline: 1px solid #000;
 }
