--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,23 @@ body {
     text-align: center;
 }
 
-#score
+#scoreboard
 {
     position: absolute;
     top: 0;
     left: 30%;
     z-index: 100;
     width: 200px;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     font-family: Arial, san-serif;
     outline: 1px solid #000;
+}
+
+#text {
+    display: inline-block;
+}
+
+#score {
+    display: inline;
 }
